MJ 27/12/2004
- Changed print in IncrementalFreq to print only those lines that have
  non-zero frequency. Thanks to Spyros Voulgaris for pointing out the
  problem.
- Some minor refactoring and docs enhancement.

GJ 19/12/2004
- Fixed a Scamp cast bug in order to compile on JDK 1.5 . 

MJ 16/12/2004
- Fixed docs bug in FastConfig, thanks to Spyros Voulgaris, and added
  hasLinkable.

GJ 15/12/2004
- Added ExtendedRandom class to support power-law distribution generation
  (thanks to Simon Patarin for this code).
- Updated CommonRandom class: now uses the an ExtendedRandom object.  

AM 25/11/2004
- Changed the implementation of the Event-driven simulator in order to
  support 64 bits for time. Part of these bits (by default: 8) are used
  to discriminate between events that occur at the same time.
- Added getCycle and getTime methods to CommonState. getCycle() is just
  new version of getT, which is now deprecated. getTime() returns the
  current time in event-based simulations, and the current cycle in
  cycle-based ones.
- Modified all the peersim observers and dynamics that uses time, that
  now use getTime instead of getCycle. In this way, they are compatible
  with both ed and cd simulations.

JM 17/11/2004
- Small non-critical changes like docs, message texts, formatting, etc, plus
  changes step to cstep in DaemonProtocol to avoid conflict with scheduling

GJ 11/11/2004
- Refactored aggregation and load balancing example code: now they use 
  distribution.SingleValueHolder class and peersim.core.SingleValue interface
  instead of example.aggregation.AbstractFunction and 
  example.aggregation.Aggregation interface.
- example.aggregation.AbstractFunction class and
  example.aggregation.Aggregationinterface removed to avoid code replication.

JM 9/11/2004
- removed Protocols, added peersim.config.FastConfig instead. The new feature
  is that FastConfig is automatic, it reads and stores "linkable" config lines
  in a transparent fashion to the protocols.